Finished the basic functions